<resources>
    <string name="app_name">Remind-It_Demo</string>
    <string name="welcome">Welcome to Remind-It!</string>
    <string name="start">Get Started!</string>
    <string name="loginPage">Enter login credentials:</string>
    <string name="registerPage">Register with below fields</string>
    <string name="goToRegister">Go to register</string>
    <string name="registerButton">Register</string>
    <string name="goToLogin">Go to login</string>
    <string name="loginButton">Login</string>
    <string name="loginHint">login</string>
    <string name="passwordHint">*****</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_reminders_page">RemindersPageActivity</string>
    <string name="openMap">Go to map</string>
    <string name="cancel_finish">Cancel</string>
    <string name="register_url">https://remind-it-236717.appspot.com/users/reg</string>
    <string name="login_url">https://remind-it-236717.appspot.com/users/auth</string>
    <string name="newReminder_url">https://remind-it-236717.appspot.com/events/create</string>
    <string name="fetchReminders_url">https://remind-it-236717.appspot.com/events/read/</string>
    <string name="deleteReminder_url">https://remind-it-236717.appspot.com/events/delete/</string>
    <string name="editReminder_url">https://remind-it-236717.appspot.com/events/update/</string>
    <string name="fetchAllEvents">https://remind-it-236717.appspot.com/events/get/all</string>
    <string name="title_activity_pick_location">Map</string>
</resources>
